--- a/foundation/contact.html
+++ b/foundation/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js" lang="en">
 
 <head>
 
@@ -14,40 +14,102 @@
 
 <body>
     <header class='header'>
-        <nav class="navigation">
+        <nav>
+            <div class="title-bar" data-responsive-toggle="menunav" data-hide-for="medium">
+                <button class="menu-icon" type="button" data-toggle="menunav"></button>
+                <div class="title-bar-title">Menu</div>
+                </div>
 
-            <ul class='menu align-right'>
-                <li>
-                    <a href="#contact">CONTACT</a>
-                </li>
-                <li>
-                    <a href="#lifestyle">LIFESTYLE</a>
-                </li>
-                <li>
-                    <a href="#nesw">NEWS</a>
-                </li>
-                <li>
-                    <a href="#amenities">AMENITIES</a>
-                </li>
-                <li>
-                    <a href="#abou">ABOUT</a>
-                </li>
-                <li>
-                    <a href="#home">HOME</a>
-                </li>
-
-            </ul>
-            <br>
-            <br>
-            <div>
-                <input type="text" name="search" placeholder="search">
+                <div class="top-bar" id="menunav">
+                    <div class="top-bar-right">
+                        <ul class='menu'>                       
+                            <li>
+                                <a href="#home">HOME</a>
+                            </li>
+                            <li>
+                                <a href="#abou">ABOUT</a>
+                            </li>
+                            <li>
+                                <a href="#amenities">AMENITIES</a>
+                            </li>
+                            <li>
+                                <a href="#nesw">NEWS</a>
+                            </li>
+                            <li>
+                                <a href="#lifestyle">LIFESTYLE</a>
+                            </li>
+                            <li>
+                                <a href="#contact">CONTACT</a>
+                            </li> 
+                        </ul>
+                    </div>
+                </div>
             </div>
         </nav>
-
-        <h1>Best Music</h1>
     </header>
+    <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
+        <div class="orbit-wrapper">
+            <div class="orbit-controls">
+            <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+            <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
+            </div>
+            <ul class="orbit-container">
+            <li class="is-active orbit-slide">
+                <figure class="orbit-figure">
+                <img class="orbit-image" src="assets/media/image/week.jpg" width="1200px" height="300px" alt="Space">
+                <figcaption class="orbit-caption">Space, the final frontier.</figcaption>
+                </figure>
+            </li>
+            <li class="orbit-slide">
+                <figure class="orbit-figure">
+                <img class="orbit-image" src="assets/media/image/week.jpg" width="1200px" height="300px" alt="Space">
+                <figcaption class="orbit-caption">Lets Rocket!</figcaption>
+                </figure>
+            </li>
+            <li class="orbit-slide">
+                <figure class="orbit-figure">
+                <img class="orbit-image" src="assets/media/image/week.jpg" width="1200px" height="300px" alt="Space">
+                <figcaption class="orbit-caption">Encapsulating</figcaption>
+                </figure>
+            </li>
+            </ul>
+        </div>
+        <nav class="orbit-bullets">
+            <button class="is-active" data-slide="0"><span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span></button>
+            <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
+            <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
+            <button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
+        </nav>
+    </div>
     <hr>
     <div class="content">
+        <div class='grid-x grid-padding-x'>
+            <div class='large-5 middle-5 cell'>
+                <div class="grid-x grid-padding-x align-right"> <!-- Aligned to the right -->
+                    <div class="cell small-1">
+                        <div class='line'></div>
+                    </div>
+                    <div class="cell small-7">
+                        <h3>Cytonn Real Estate ,Invest to provide quality real estate solution</h3>
+                    </div>
+                </div>
+            </div>
+            <div class='large-7 middle-7 cell'>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+            </div>
+        </div>  
+        <div id='media' class="media-object stack-for-small">
+            <div class="media-object-section middle">
+                <h4>I Can Stack.</h4>
+                <p>Shrink the browser width to see me stack. I do tricks for dog treats, but I'm not a dog.</p>
+            </div>
+            <div class="media-object-section middle">
+                <div class="thumbnail">
+                <img src= "assets/media/image/swimming.jpg">
+                </div>
+            </div>
+        </div>
+    
         <h2>About us</h2>
         <div class="multiplecolumn">
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
@@ -71,22 +133,54 @@
                 </svg>
             </div>
         </div>
-
+        <table class="hover">
+            <thead>
+                <tr>
+                    <th>Firstname</th>
+                    <th>Lastname</th>
+                    <th>Email</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Morio</td>
+                    <td>modo</td>
+                    <td>morio@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>sir</td>
+                    <td>alex</td>
+                    <td>alex@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>Ule</td>
+                    <td>Naira</td>
+                    <td>july@gmail.com</td>
+                </tr>
+            </tbody>
+        </table>
+        <form class="form-horizontal">
+            <label>Input Label
+                <input type="text" placeholder="Full Name">
+            </label>
+            <label>Select Menu
+                <select>
+                    <option value="husker">Husker</option>
+                    <option value="starbuck">Starbuck</option>
+                    <option value="hotdog">Hot Dog</option>
+                    <option value="apollo">Apollo</option>
+                </select>
+            </label>
+            <label>
+                Comments
+                <textarea placeholder="None"></textarea>
+            </label>
+            <div class="form-group">
+                <button type="button" class="btn btn-success">Success</button>
+            </div>
+        </form>
     </div>
-    <div class='columnrow'>
-        <div class="col-3" id='height'>
-            <h3>Column 3</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        </div>
-        <div class="col-9">
-            <h3>Column 9</h3>
-            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic
-                typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
-                of Lorem Ipsum. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
-                opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many
-                web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-        </div>
-    </div>
+   
     <br>
     <br>
     <section>
@@ -98,22 +192,20 @@
 
     <div class="center">
         <div class="pagination">
-            <a href="#">&laquo;</a>
-            <a href="#" class="active">1</a>
-            <a href="#">2</a>
-            <a href="#">3</a>
-            <a href="#">4</a>
-            <a href="#">5</a>
-            <a href="#">6</a>
-            <a href="#">&raquo;</a>
+            <p><button class="hollow button secondary">BOOK NOW</button><p>
         </div>
     </div>
     <div class="fixedpos">
         <audio src="media/video/video.mp4" controls="controls">
     </div>
     <div id="foot">
+        
         <p style="text-align:center;">Copyright 2017</p>
     </div>
+    <script src="assets/foundation/js/vendor/jquery.js"></script>
+    <script src="assets/foundation/js/vendor/what-input.js"></script>
+    <script src="assets/foundation/js/vendor/foundation.js"></script>
+    <script src="assets/foundation/js/app.js"></script>
 </body>
 
 </html>
