--- a/foundation/contact.html
+++ b/foundation/contact.html
@@ -57,19 +57,19 @@
             <li class="is-active orbit-slide">
                 <figure class="orbit-figure">
                 <img class="orbit-image" src="assets/media/image/week.jpg" width="1200px" height="300px" alt="Space">
-                <figcaption class="orbit-caption">Space, the final frontier.</figcaption>
+                <figcaption class="orbit-caption">Week 1.</figcaption>
                 </figure>
             </li>
             <li class="orbit-slide">
                 <figure class="orbit-figure">
                 <img class="orbit-image" src="assets/media/image/week.jpg" width="1200px" height="300px" alt="Space">
-                <figcaption class="orbit-caption">Lets Rocket!</figcaption>
+                <figcaption class="orbit-caption">week 2</figcaption>
                 </figure>
             </li>
             <li class="orbit-slide">
                 <figure class="orbit-figure">
                 <img class="orbit-image" src="assets/media/image/week.jpg" width="1200px" height="300px" alt="Space">
-                <figcaption class="orbit-caption">Encapsulating</figcaption>
+                <figcaption class="orbit-caption">week 3</figcaption>
                 </figure>
             </li>
             </ul>
